--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
     padding-top: 60px;
     padding-bottom: 20px;
     margin-bottom: 20px;
-    background-color: #F4F4FF;
+    background-color: #EEEEEE;
     text-align: left;
 }
 .row-opaque {
@@ -72,8 +72,7 @@ body {
     margin-bottom: 0;
 }
 .col-heading {
-    background: #111111;
-    background: #11111199;
+    background-image: url('../img/opaque50.png');
     margin: 0;
     margin-left: -4096px;
     padding-top: 0;
@@ -242,7 +241,7 @@ html {
     bottom: 0;
     width: 100%;
     height: 50px;
-    background-color: #EEEFFF;
+    background-color: #DDDDDD;
 }
 
 .page-header {
